# yosemite

./: .gitignore  README.md  explore.bat  explore.sh  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: nextjs.yml
databases/db/: MAIN_tfpxsquya5g8ilhf.seg  _MAIN_1.toc
docs/: core.md  heat.md  index.md
docs/api/: fonts.css  get_started.md  heat.md  theme.css
docs/api/ml/: ml.md  yosemite.ml.text.md  yosemite.ml.transformers.md
docs/api/ml/data/: yosemite.ml.data.database.md  (+2 more)
docs/api/tools/: yosemite.tools.input.md  yosemite.tools.load.md  yosemite.tools.loaders.md  yosemite.tools.text.md
explore/: rag.py
nextjs/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
nextjs/app/: globals.css  page.tsx
nextjs/app/docs/: page.tsx
nextjs/components/ui/: meteors.tsx
nextjs/public/docs/: 404.html  index.html  objects.inv
notebooks/tutorials/: 00-yosemite-rag.ipynb
notebooks/tutorials/newton_example/: physics.txt
notebooks/yosemite-rag/: rag.ipynb  rag.md
rust/libhammadpy_text/: Cargo.toml
tests/: main.py
tests/ml/: database.py
tests/tools/: load.py
tiny/: setup.py
tiny/yosemite_tiny/: __init__.py  main.py
tiny/yosemite_tiny/tools/: cli.py  load.py
yosemite/: main.py
yosemite/__cli__/: cli.py
yosemite/llms/: __init__.py  llm.py  serve.py
yosemite/ml/: __init__.py  database.py  text.py
yosemite/ml/database/: database.py
yosemite/ml/legacy/: database.py  vector_database.py
yosemite/ml/transform/: transformers.py
yosemite/prehistoric/: heat.py
yosemite/tools/: input.py  text.py
(+27 files in other folders)
