[tool.poetry]
name = "yosemite"
version = "0.1.0"
description = ""
authors = ["Hammad Saeed <hammad@supportvectors.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
libhammadpy-text = "^0.1.10"
art = "^6.1"

[tool.poetry.extras]
ml = [
    "annoy",
    "anthropic",
    "ebooklib",
    "instructor",
    "pandas",
    "pathlib",
    "pdfminer.six",
    "PyPDF2",
    "sentence-transformers",
    "spacy",
    "pyspark",
    "Whoosh",
]

[tool.poetry.scripts]
yosemite = "yosemite.tools.text:main"
"yosemite-help" = "yosemite.tools.help:help_command"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
